[package]
name = "modtool"
version = "1.2.9"
authors = ["Mathias Olsson <hypp74@gmail.com>"]

edition = "2018"

[dependencies]
docopt = "0.8"
rustc-serialize = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

modfile = { path = "../modfile", version="1.4.6"}

#git = "https://github.com/hypp/modfile"}
